2008-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* io.c, li100.c, loconet.c, m605x.c, portio.c, srcp-server.c,
	ttycygwin.*, zimo.c: Fixed some Cygwin compile issues.

2008-03-03 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-info.c: Fixed loss of info messages if they are send
	close one after another.

2008-01-29 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in: Fixed override of user defined CFLAGS variable.

2008-01-28 Guido Scholz <guido.scholz@bayernline.de>
	* man/srcpd.8, man/srcpd.conf.5: Fixed non ASCII characters.

--- Release 2.0.11 ----

2008-01-26 Jörg Rottland <rottland@users.sourceforge.net>
	* ddl.c, ddl_nmra.c: Support for PAGE mode,
	fix for functions F21-F28

2008-01-25 Guido Scholz <guido.scholz@bayernline.de>
	* ddl.c: Fixed system freeze on Linux 2.4 kernels using
	ddl-module.

2008-01-19 Jörg Rottland <rottland@users.sourceforge.net>
	* ddl.c: Re-activated improved timing,
	additional config parameter to allow filtering of SM commands

2008-01-13 Jörg Rottland <rottland@users.sourceforge.net>
	* srcp-command.c: Support for GL functions up to F28 added.

2008-01-12 Jörg Rottland <rottland@users.sourceforge.net>
	* loopback.c: Support for VERIFY <bus> SM added.
	* ddl.*, ddl_nmra.*, srcp-sm.c: Implemented ddl_nmra support for
	srcp 0.8.x (only GL and SM parts have been adapted).
	Re-activated decoder programming; re-activated decoder support
	for protocol type 2 and for more than 28 speed steps. Support
	for more controller functions added (up to 28, tested only from
	F0 to F12). Support for Operations Mode Programming (programming
	on main, POM) added.

2008-01-12 André Schenk <andre@melior.s.bawue.de>
	* ib.*: P50X command set completed.

2008-01-11 Jörg Rottland <rottland@users.sourceforge.net>
	* srcp-command.c, srcp-sm.c: Support for VERIFY <bus> SM added,
	stricter SM parameter control.

2008-01-10 Jörg Rottland <rottland@users.sourceforge.net>
	* srcp-gl.c: Fixed missing attributes of enqueued GLs.
